# d8tahaven

./: .env.example  .gitignore  LEAD_DEVELOPER_PROMPT.md  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  test_error_final.txt  test_log.txt  test_output.txt
.agent/workflows/: feature-pr.md
alembic/: env.py
alembic/versions/: 8bea1da7f861_initial_schema_content_items_and_.py
docs/: README.md  START_HERE_AI.md
docs/api/: endpoints-overview.md
docs/architecture/: build-decisions.md  pdc-principles.md
docs/data-models/: schema-overview.md
docs/features/: roadmap.md
docs/interfaces/: browser-plugin-spec.md
docs/reference/: glossary.md
docs/v1-reference/: api-v1.md  browser-extension-v1.md  schema-v1.md
docs/v2-vision/: README.md
infrastructure/: docker-compose.yml  init-db.sql
src/capture/: api.py  file_extractor.py
src/shared/: __init__.py  embeddings.py
src/storage/: __init__.py  database.py  models.py
tests/features/: 01-capture-basic.feature  02-capture-file.feature  02-capture-files.feature
tests/step_defs/: test_capture_basic.py  test_capture_files.py
